unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Saturday_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Saturday_Notes__c</fullName>
    <label>Saturday Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>