unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Submitted__c.field-meta.xml
<CustomField>
    <fullName>pse__Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>