unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Time_Excluded__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Excluded</label>
    <type>Checkbox</type>
</CustomField>