unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Travel_Week__c.field-meta.xml
<CustomField>
    <fullName>pse__Travel_Week__c</fullName>
    <formula>IF(OR(pse__Travel_Sun__c,pse__Travel_Mon__c,pse__Travel_Tue__c,pse__Travel_Wed__c,pse__Travel_Thu__c,pse__Travel_Fri__c,pse__Travel_Sat__c),'Yes','No')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Week</label>
    <type>Text</type>
</CustomField>