unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__A_Day_Can_Not_Be_Less_Then_Zero_Hrs.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__A_Day_Can_Not_Be_Less_Then_Zero_Hrs</fullName>
    <active>false</active>
    <description>This will ensure that an individual day is not less than the zero hrs</description>
    <errorConditionFormula>OR(pse__Monday_Hours__c &lt; 0, pse__Tuesday_Hours__c &lt; 0, pse__Wednesday_Hours__c &lt; 0, pse__Thursday_Hours__c &lt; 0, pse__Friday_Hours__c &lt; 0, pse__Saturday_Hours__c &lt; 0, pse__Sunday_Hours__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>pse__Admin_Global_Edit__c</errorDisplayField>
    <errorMessage>No individual day for a single line can be less than zero hours</errorMessage>
</ValidationRule>