unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Billable_Timecards_may_not_be_Credited.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Billable_Timecards_may_not_be_Credited</fullName>
    <active>true</active>
    <description>Timecards may only be marked as "Time Credited" if they are Non-Billable.</description>
    <errorConditionFormula>AND(pse__Billable__c,pse__Time_Credited__c)</errorConditionFormula>
    <errorDisplayField>pse__Time_Credited__c</errorDisplayField>
    <errorMessage>Timecards may only be marked as "Time Credited" if they are Non-Billable.</errorMessage>
</ValidationRule>