unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Approval_Requires_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Approval_Requires_Submit</fullName>
    <active>true</active>
    <description>For a Timecard to be marked as Approved, it must also be marked as Submitted.</description>
    <errorConditionFormula>AND(pse__Approved__c,NOT(pse__Submitted__c))</errorConditionFormula>
    <errorDisplayField>pse__Approved__c</errorDisplayField>
    <errorMessage>For a Timecard to be marked as Approved, it must also be marked as Submitted.</errorMessage>
</ValidationRule>