unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Assignment_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Assignment_Project_Mismatch</fullName>
    <active>true</active>
    <description>Timecard Project must match Assignment Project.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; ''),NOT(ISNULL(pse__Assignment__r.pse__Project__c)),(pse__Assignment__r.pse__Project__c &lt;&gt; ''),(pse__Project__c &lt;&gt; pse__Assignment__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Timecard Project must match Assignment Project.</errorMessage>
</ValidationRule>