unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Assignment_Resource_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Assignment_Resource_Mismatch</fullName>
    <active>true</active>
    <description>Timecard Resource must match Assignment Resource.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; ''),NOT(ISNULL(pse__Assignment__r.pse__Resource__c)),(pse__Assignment__r.pse__Resource__c &lt;&gt; ''),(pse__Resource__c &lt;&gt; pse__Assignment__r.pse__Resource__c))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Timecard Resource must match Assignment Resource.</errorMessage>
</ValidationRule>