unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Header_must_be_1_week_long.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Header_must_be_1_week_long</fullName>
    <active>true</active>
    <errorConditionFormula>pse__Start_Date__c  &lt;&gt;  (pse__End_Date__c - 6)</errorConditionFormula>
    <errorMessage>Timecard Header must span 1 week (7 days inclusive).</errorMessage>
</ValidationRule>