unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Header_Resource_is_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Header_Resource_is_Constant</fullName>
    <active>true</active>
    <description>A Timecard Header's Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
    <errorConditionFormula>OR(ISNULL(pse__Resource__c),(pse__Resource__c=''),AND(ISCHANGED(pse__Resource__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
    <errorDisplayField>pse__Resource__c</errorDisplayField>
    <errorMessage>A Timecard Header's Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
</ValidationRule>