unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_May_Not_Be_Billable.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_May_Not_Be_Billable</fullName>
    <active>true</active>
    <description>A Timecard may only be marked as Billable if its Project is Billable and its Assignment, if any, is Billable.</description>
    <errorConditionFormula>AND(pse__Billable__c, OR(AND(NOT(ISNULL(pse__Assignment__c)), (pse__Assignment__c &lt;&gt; ''), NOT(pse__Assignment__r.pse__Is_Billable__c)), AND(NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; ''), NOT(pse__Project__r.pse__Is_Billable__c))))</errorConditionFormula>
    <errorDisplayField>pse__Billable__c</errorDisplayField>
    <errorMessage>A Timecard may only be marked as Billable if its Project is Billable and its Assignment, if any, is Billable.</errorMessage>
</ValidationRule>