unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Methodology_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Methodology_Project_Mismatch</fullName>
    <active>true</active>
    <description>Validates whether the methodology selected on a timecard belongs to the same project as the timecard.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Project_Methodology_Object__c)),(pse__Project_Methodology_Object__c &lt;&gt; ''),NOT(ISNULL(pse__Project_Methodology_Object__r.pse__Project__c)),(pse__Project_Methodology_Object__r.pse__Project__c &lt;&gt; ''),(pse__Project__c &lt;&gt; pse__Project_Methodology_Object__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Project_Methodology_Object__c</errorDisplayField>
    <errorMessage>Cannot associate the methodology with this timecard. The methodology must belong to the same project as the timecard. Select a methodology that belongs to the same project as the timecard.</errorMessage>
</ValidationRule>