unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Milestone_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Milestone_Project_Mismatch</fullName>
    <active>true</active>
    <description>Timecard Project must match Milestone Project.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Milestone__c)),(pse__Milestone__c &lt;&gt; ''),NOT(ISNULL(pse__Milestone__r.pse__Project__c)),(pse__Milestone__r.pse__Project__c  &lt;&gt; ''),(pse__Project__c &lt;&gt;  pse__Milestone__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Milestone__c</errorDisplayField>
    <errorMessage>Timecard Project must match Milestone Project.</errorMessage>
</ValidationRule>