unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Phase_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Phase_Project_Mismatch</fullName>
    <active>true</active>
    <description>Validates whether the phase selected on a timecard belongs to the same project as the timecard.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Project_Phase_Object__c)),(pse__Project_Phase_Object__c &lt;&gt; ''),NOT(ISNULL(pse__Project_Phase_Object__r.pse__Project__c)),(pse__Project_Phase_Object__r.pse__Project__c &lt;&gt; ''),(pse__Project__c &lt;&gt; pse__Project_Phase_Object__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Project_Phase_Object__c</errorDisplayField>
    <errorMessage>Cannot associate the phase with this timecard. The phase must belong to the same project as the timecard. Select a phase that belongs to the same project as the timecard.</errorMessage>
</ValidationRule>