unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/pse__Timecard_Requires_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Timecard_Requires_Assignment</fullName>
    <active>true</active>
    <description>Timecards for this Project and/or Resource require an Assignment.  Only if the Project OR the Resource allows Timecards without Assignment can the Assignment be blank on the Timecard.</description>
    <errorConditionFormula>AND(NOT(pse__Project__r.pse__Allow_Timecards_Without_Assignment__c),NOT(pse__Resource__r.pse__Allow_Timecards_Without_Assignment__c),OR(ISNULL(pse__Assignment__c),(pse__Assignment__c = '')))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Timecards for this Project and/or Resource require an Assignment.</errorMessage>
</ValidationRule>