unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/psaws__My_Rejected_Timecards.listView-meta.xml
<ListView>
    <fullName>psaws__My_Rejected_Timecards</fullName>
    <columns>NAME</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Is_Resource_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>My Rejected Timecards</label>
</ListView>