unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/Submitted_Not_Approved.listView-meta.xml
<ListView>
    <fullName>Submitted_Not_Approved</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Milestone__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>pse__Submitted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Submitted Not Approved</label>
</ListView>